--- a/index.html
+++ b/index.html
@@ -39,43 +39,44 @@
 <body class="bg-gray-100">
 
    <nav class="bg-white shadow-lg shadow-gray-200 flex flex-row justify-between items-center px-24 py-5 items-center gap-5">
-        <div><img class="w-32 lg:w-40" src="./my_paytm_asset_collection/paytm_logo.png" alt=""></div>
-        <div class="hidden lg:flex flex-row text-xs justify-between space-x-2 xl:space-x-6 ">
-            <a class="font-semibold hover:bg-zinc-100 rounded py-2 px-2 text-base" href="#">Paytm for Consumer</a>
-            <a class="font-semibold hover:bg-zinc-100 rounded py-2 px-2 text-base" href="#">Paytm for Business</a>
-            <a class="font-semibold hover:bg-zinc-100 rounded py-2 px-2 text-base" href="#">Company</a>
-            <a class="font-semibold hover:bg-zinc-100 rounded py-2 px-2 text-base" href="#">Investor Relations</a>
-            <a class="font-semibold hover:bg-zinc-100 rounded py-2 px-2 text-base" href="#">Career</a>
+        <div><img class="w-32 lg:w-48" src="./my_paytm_asset_collection/paytm_logo.png" alt=""></div>
+        <div class="hidden lg:flex flex-row text-xs justify-between align-middle space-x-2 xl:space-x-6 ">
+            <a class="font-semibold hover:bg-zinc-100 rounded py-4 px-2 text-[20px]" href="#">Paytm for Consumer</a>
+            <a class="font-semibold hover:bg-zinc-100 rounded py-4 px-2 text-[20px]" href="#">Paytm For Business</a>
+            <a class="font-semibold hover:bg-zinc-100 rounded py-4 px-2 text-[20px]" href="#">Investor Relations</a>
+            <a class="font-semibold hover:bg-zinc-100 rounded py-4 px-2 text-[20px]" href="#">Company</a>
+            <a class="font-semibold hover:bg-zinc-100 rounded py-4 px-2 text-[20px]" href="#">Career</a>
         </div>
         <div class="flex flex-row justify-around items-center font-bold text-white bg-sky-400 hover:bg-blue-900 rounded-full">
-        <p class="px-1.5 ml-2 py-1.5 text-xs">Sign In</p>  
-        <img class="w-6"src="https://assetscdn1.paytm.com/frontendcommonweb/9fd9626b.svg" alt="">
+        <p class="px-4 ml-2 py-2 text-base">Sign In</p>  
+        <img class="w-[35px]"src="https://assetscdn1.paytm.com/frontendcommonweb/9fd9626b.svg" alt="">
         </div>
    </nav>
 
    <section id="kyc">
     <div>
-        <p class="text-xs font-semibold text-center pt-3 pb-3 lg:text-sm">No Wallet KYC Required
-            😊
+        <p class="text-sm font-medium text-center pt-3 pb-3 lg:text-base">
+            <span class="text-zinc-900 font-bold">No Wallet KYC Required</span> 
+            <span class="text-[28px]">😊</span> 
             to pay using UPI on Paytm.
-            Learn more.
+           <span class="text-zinc-900 font-bold">Learn more.</span> 
             </p>
     </div>
    </section>
 
    <section id="content">
-    <div class="bg-white flex flex-row justify-between gap-44 pt-24 pb-20">
+    <div class="bg-neutral-50 flex flex-row justify-between gap-56 pt-24 pb-20">
         <!-- left section -->
-        <div class=" flex flex-col w-1/3 space-y-12 my-auto mx-auto items-center sm:items-start ">
-            <div class=""><img class="w-16" src="./my_paytm_asset_collection/paytm_upi_img_content.png" alt=""></div>
+        <div class=" flex flex-col w-[580px] space-y-12 my-auto ml-80 items-center sm:items-start ">
+            <div class=""><img class="w-[90px] drop-shadow" src="./my_paytm_asset_collection/paytm_upi_img_content.png" alt=""></div>
             <div class="space-y-4">
-                <h1 class="font-bold text-5xl">India's Most-loved Payments App</h1>
-                <p class="text-lg font-semibold">Recharge & pay bills, book flights & movie tickets, open a savings account, invest in stocks & mutual funds, and do a lot more.</p>
+                <h1 class="font-bold text-6xl leading-tight">India's Most-loved Payments App</h1>
+                <p class="text-[24px] font-semibold w-[550px]">Recharge & pay bills, book flights & movie tickets, open a savings account, invest in stocks & mutual funds, and do a lot more.</p>
             </div>
-            <div class="flex flex-row space-x-4 items-center bg-black rounded-full text-white py-2 px-4 hover:bg-transparent">
-                <p class="hover:text-black">Download Paytm App</p>
-                <svg class="fill-white hover:fill-blue-400" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.6593 15.3557C10.7589 16.1979 9.76546 16.0666 8.81854 15.6695C7.81182 15.2644 6.89149 15.2388 5.82828 15.6695C4.50426 16.2203 3.80155 16.0602 3.00415 15.3557C-1.49786 10.8883 -0.833353 4.08311 4.28331 3.82691C5.52427 3.89096 6.39311 4.48821 7.12406 4.53785C8.21052 4.32489 9.25047 3.71483 10.4133 3.79489C11.8105 3.90377 12.8554 4.43538 13.5531 5.3913C10.6791 7.05657 11.3603 10.7073 14 11.7321C13.4717 13.0691 12.7939 14.3902 11.6576 15.3669L11.6593 15.3557ZM7.02439 3.77888C6.88982 1.79336 8.55939 0.160122 10.4798 0C10.7439 2.28974 8.32017 4.00305 7.02439 3.77888Z" fill="white"></path></svg>
-                <svg class="fill-white hover:fill-blue-400" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.088012 0.571735C0.0310801 0.726729 0 0.910797 0 1.121V14.8786C0 15.0894 0.0311427 15.2736 0.0881839 15.4286L7.32808 7.9997L0.088012 0.571735ZM0.590122 15.9564C0.85223 16.0466 1.18264 15.9995 1.54068 15.7912L10.0736 10.8165L7.83627 8.52109L0.590122 15.9564ZM10.7221 10.4391L13.3647 8.8987C14.2118 8.40415 14.2118 7.59609 13.3647 7.10217L10.7211 5.561L8.34443 7.99966L10.7221 10.4391ZM10.073 5.18317L1.54068 0.209061C1.18252 0.000250885 0.852017 -0.0466058 0.589868 0.0438429L7.83624 7.47828L10.073 5.18317Z" fill="white"></path></svg>
+            <div class="flex flex-row font-semibold space-x-4 items-center bg-black rounded-full text-white py-3 px-6 hover:bg-transparent hover:outline hover:outline-1 hover:outline-black hover:text-black hover:fill-[#000] hover:stroke-1 hover:stroke-black hover:">
+                <p>Download Paytm App</p>
+                <svg class="fill-white hover:fill-black" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.6593 15.3557C10.7589 16.1979 9.76546 16.0666 8.81854 15.6695C7.81182 15.2644 6.89149 15.2388 5.82828 15.6695C4.50426 16.2203 3.80155 16.0602 3.00415 15.3557C-1.49786 10.8883 -0.833353 4.08311 4.28331 3.82691C5.52427 3.89096 6.39311 4.48821 7.12406 4.53785C8.21052 4.32489 9.25047 3.71483 10.4133 3.79489C11.8105 3.90377 12.8554 4.43538 13.5531 5.3913C10.6791 7.05657 11.3603 10.7073 14 11.7321C13.4717 13.0691 12.7939 14.3902 11.6576 15.3669L11.6593 15.3557ZM7.02439 3.77888C6.88982 1.79336 8.55939 0.160122 10.4798 0C10.7439 2.28974 8.32017 4.00305 7.02439 3.77888Z" fill="white"></path></svg>
+                <svg class="fill-white hover:fill-black" width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.088012 0.571735C0.0310801 0.726729 0 0.910797 0 1.121V14.8786C0 15.0894 0.0311427 15.2736 0.0881839 15.4286L7.32808 7.9997L0.088012 0.571735ZM0.590122 15.9564C0.85223 16.0466 1.18264 15.9995 1.54068 15.7912L10.0736 10.8165L7.83627 8.52109L0.590122 15.9564ZM10.7221 10.4391L13.3647 8.8987C14.2118 8.40415 14.2118 7.59609 13.3647 7.10217L10.7211 5.561L8.34443 7.99966L10.7221 10.4391ZM10.073 5.18317L1.54068 0.209061C1.18252 0.000250885 0.852017 -0.0466058 0.589868 0.0438429L7.83624 7.47828L10.073 5.18317Z" fill="white"></path></svg>
             </div>
         </div>
         <!-- right section -->
