Added Bills Section

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
    </section>
 
    <section id="content">
+    <!-- Main Content - India's Most Loved Payment's App -->
     <div class="bg-neutral-50 flex flex-row justify-between gap-56 pt-24 pb-20">
         <!-- left section -->
         <div class=" flex flex-col w-[580px] space-y-12 my-auto ml-80 items-center sm:items-start ">
@@ -82,7 +83,92 @@
         <!-- right section -->
         <div class=" w-1/3 flex flex-row justify-end"><img class="w-4/5" src="./my_paytm_asset_collection/mobilepics.png" alt=""></div>
     </div>
+    <!-- Bill Section - 1 -->
+    <div class="bills bg-[#00BAF2] w-screen h-[420px] flex flex-col justify-evenly">
+        <div class="rechargeBills  ml-80 text-white w-max h-auto flex flex-col  gap-5">
+            <div><h1 class="text-[42px] font-bold">Recharge & Pay Bills on Paytm.</h1></div>
+            <div class="flex flex-row gap-9">
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/mobileRecharge.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Recharge</h2>
+                    <p class="text-md font-bold">Prepaid <br> Mobile  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/HouseRent.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Pay</h2>
+                    <p class="text-md font-bold">Rent <br> Payment  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/PayElectricity.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Pay</h2>
+                    <p class="text-md font-bold">Electricity <br> Bill  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/payDTH.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Recharge</h2>
+                    <p class="text-md font-bold">DTH <br> Connection  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/BookGas.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Book</h2>
+                    <p class="text-md font-bold">Gas <br> Cylinder  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/PayCreditBill.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">Pay</h2>
+                    <p class="text-md font-bold">Credit <br> Card Bill  ></p>
+                </div>
+                <div class="hover:bg-cyan-600/30 flex flex-col justify-evenly content-start pl-4 py-4 h-[200px] w-[170px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/allPaymentServices.png" alt="mobileRecharge">
+                    <h2 class="text-[20px] font-[500]">All</h2>
+                    <p class="text-md font-bold">Payment <br> Services  ></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!-- Bill Section - 2 -->
+    <div class="bills bg-[#0f4a8a] w-screen h-[420px] flex flex-col justify-evenly">
+        <div class="rechargeBills  ml-80 text-white w-max h-auto flex flex-col  gap-5">
+            <div><h1 class="text-[42px] font-bold">Book & Buy on Paytm.</h1></div>
+
+            <div class="flex flex-row gap-9">
+
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/movieTickets.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Movie <br> Tickets  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/flightTickets.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Flight <br> Tickets  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/busTickets.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Bus <br> Tickets  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/trainTickets.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Train <br> Tickets  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/buyInsurance.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Buy <br> Insurance  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/internationalFlights.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">International <br> Flights  ></p>
+                </div>
+                <div class="hover:bg-[#002970]/40 flex flex-col justify-evenly content-start pl-4 py-4 h-[172px] w-[168px] rounded-xl">
+                    <img class="w-16 mb-3" src="./my_paytm_asset_collection/investInStocks.png" alt="mobileRecharge">
+                    <p class="text-lg font-bold">Invest <br> in Stocks  ></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
    </section>
+
 
 </body>
 </html>
