--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    </section>
 
    <section id="content">
-    <!-- Main Content - India's Most Loved Payment's App -->
+    <!-- Main Content - India's Most Loved Payment's App Section-1 -->
     <div class="bg-neutral-50 flex flex-row justify-between gap-56 pt-24 pb-20">
         <!-- left section -->
         <div class=" flex flex-col w-[580px] space-y-12 my-auto ml-80 items-center sm:items-start ">
@@ -83,7 +83,7 @@
         <!-- right section -->
         <div class=" w-1/3 flex flex-row justify-end"><img class="w-4/5" src="./my_paytm_asset_collection/mobilepics.png" alt=""></div>
     </div>
-    <!-- Bill Section - 1 -->
+    <!-- Bill Section - 2-1 -->
     <div class="bills bg-[#00BAF2] w-screen h-[420px] flex flex-col justify-evenly">
         <div class="rechargeBills  ml-80 text-white w-max h-auto flex flex-col  gap-5">
             <div><h1 class="text-[42px] font-bold">Recharge & Pay Bills on Paytm.</h1></div>
@@ -127,7 +127,7 @@
             </div>
         </div>
     </div>
-    <!-- Bill Section - 2 -->
+    <!-- Bill Section - 2-2 -->
     <div class="bills bg-[#0f4a8a] w-screen h-[420px] flex flex-col justify-evenly">
         <div class="rechargeBills  ml-80 text-white w-max h-auto flex flex-col  gap-5">
             <div><h1 class="text-[42px] font-bold">Book & Buy on Paytm.</h1></div>
@@ -167,7 +167,7 @@
         </div>
     </div> 
 
-    <!--  Paytm Payments Instruments -->
+    <!--  Paytm Payments Instruments Section-3-->
     <div class="PaytmPayments section-3 flex flex-col justify-around gap-12 mx-auto my-24 w-[1170px]">   
 
         <div><h1 class="text-[42px] font-bold">Paytm Payments Instruments.</h1></div>
@@ -286,6 +286,37 @@
 
     </div>
 
+    <!-- Financial Services by Paytm Section-4-1 -->
+    <div class="bg-white w-screen h-[780px] mx-auto flex flex-col justify-center">
+
+        <div class="w-[1170px] flex flex-col mx-auto justify-center">
+
+            <div><h1 class="text-[50px] leading-10 font-bold mb-4">Financial Services by Paytm</h1></div>
+
+            <div class="w-[1150px] flex flex-row mt-1 gap-40">
+
+                <div class="w-[560px] h-[460px] flex flex-col justify-start gap-11 pt-12">
+
+                    <img class="w-52 mb-4" src="./my_paytm_asset_collection/paytmPaymentsBank.png" alt="">
+
+                    <h1 class="text-[40px] leading-tight font-bold">India's most sincere <br> bank.</h1>
+
+                    <p class="text-[20px] font-semibold leading-6">Paytm Payments Bank offers secure, transparent and risk-free banking at your fingertips. With instant account opening, virtual debit card and zero balance requirements, experience the future of banking today.</p>
+
+                    <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outline hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                        <p>Learn More ></p> 
+                    </div>
+
+                </div>
+
+                <div class="h-[500px]">
+                    <img class="h-[500px]" src="./my_paytm_asset_collection/paytmPaymentBank_AccountDetails.png" alt="">
+                </div>
+
+            </div>
+         </div>
+    </div>
+    
    </section>
 
 
