Added Financial Services section 4-3 Insurance Section

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </div>
 
     <!-- Financial Services by Paytm Section-4-1 -->
-    <div class="bg-white w-screen h-[780px] mx-auto flex flex-col justify-center">
+    <div class="bg-white w-screen h-[790px] mx-auto flex flex-col justify-center">
 
         <div class="w-[1170px] flex flex-col mx-auto justify-center">
 
@@ -314,13 +314,13 @@
 
             <div class="w-[1150px] flex flex-row mt-1 gap-40">
 
-                <div class="w-[560px] h-[460px] flex flex-col justify-start gap-11 pt-12">
+                <div class="w-[520px] h-[460px] flex flex-col justify-start gap-11 pt-12">
 
                     <img class="w-52 mb-4" src="./my_paytm_asset_collection/paytmPaymentsBank.png" alt="">
 
-                    <h1 class="text-[40px] leading-tight font-bold">India's most sincere <br> bank.</h1>
+                    <h1 class="text-[42px] leading-tight font-bold">India's most sincere <br> bank.</h1>
 
-                    <p class="text-[20px] font-semibold leading-6">Paytm Payments Bank offers secure, transparent and risk-free banking at your fingertips. With instant account opening, virtual debit card and zero balance requirements, experience the future of banking today.</p>
+                    <p class=" text-[21px] font-semibold leading-6">Paytm Payments Bank offers secure, transparent and risk-free banking at your fingertips. With instant account opening, virtual debit card and zero balance requirements, experience the future of banking today.</p>
 
                     <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outline hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
                         <p>Learn More ></p> 
@@ -330,6 +330,35 @@
 
                 <div class="h-[500px]">
                     <img class="h-[500px]" src="./my_paytm_asset_collection/paytmPaymentBank_AccountDetails.png" alt="">
+                </div>
+
+            </div>
+         </div>
+    </div>
+    <!-- Financial Services by Paytm Section-4-3 -->
+    <hr>
+    <div class="bg-white w-screen h-[600px] mx-auto flex flex-col justify-center">
+
+        <div class="w-[1170px] flex flex-col mx-auto justify-center">
+
+            <div class="w-[1150px] flex flex-row mt-1 pb-9 gap-40">
+
+                <div class="w-[560px] h-[420px] flex flex-col justify-start gap-6 pt-12">
+
+                    <img class="w-44 mb-4" src="./my_paytm_asset_collection/paytmInsuranceBroking.png" alt="">
+
+                    <h1 class="text-[42px] leading-tight font-bold">Insurance made easy.</h1>
+
+                    <p class="w-[520px] text-[21px] font-semibold leading-6 mb-1">Buying insurance does not have to be tedious, time-consuming & confusing. Paytm Insurance removes the worry of getting insured by making it simple, convenient & easy-to-understand.</p>
+
+                    <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outline hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                        <p>Learn More ></p> 
+                    </div>
+
+                </div>
+
+                <div class="">
+                    <img class="my-auto h-[400px]" src="./my_paytm_asset_collection/paytmInsuranceBookingTwoWheeler.png" alt="">
                 </div>
 
             </div>
