Added Financial Services section 4-2 Paytm Money

--- a/index.html
+++ b/index.html
@@ -335,8 +335,37 @@
             </div>
          </div>
     </div>
+    <!-- Financial Services by Paytm Section-4-2 -->
+    <div class="bg-cover bg-no-repeat bg-[url('./my_paytm_asset_collection/paytmMoneyBgImage.png')] w-screen h-[640px]  flex">
+        
+        <div class="w-[1170px] flex flex-col mx-auto justify-center">
+
+            <div class="w-[1150px] flex flex-row-reverse mt-1 pb-9 gap-40">
+
+                <div class="w-[560px] h-[420px] flex flex-col justify-start gap-6 pt-1">
+
+                    <img class="w-36 mb-4" src="./my_paytm_asset_collection/PaytmMoney.png" alt="">
+
+                    <h1 class="w-[420px] text-[42px] leading-[45px] font-bold">Build Long-term Wealth & Achieve your Goals.</h1>
+
+                    <p class="w-[520px] text-[21px] font-semibold leading-6 mb-1">Investing on Paytm Money is transparent, low-cost and commission-free. Buy stocks & mutual funds that can help you create wealth & realise your dreams.</p>
+
+                    <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outline hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                        <p>Learn More ></p> 
+                    </div>
+
+                </div>
+
+                <div class="">
+                    <img class="my-auto h-[400px]" src="./my_paytm_asset_collection/paytmMoneyMutualFunds.png" alt="">
+                </div>
+
+            </div>
+
+         </div>
+
+    </div>
     <!-- Financial Services by Paytm Section-4-3 -->
-    <hr>
     <div class="bg-white w-screen h-[600px] mx-auto flex flex-col justify-center">
 
         <div class="w-[1170px] flex flex-col mx-auto justify-center">
@@ -364,6 +393,7 @@
             </div>
          </div>
     </div>
+    
 
    </section>
 
