Added Financial Services Section 4-4 Paytm Personal Loan

--- a/index.html
+++ b/index.html
@@ -393,6 +393,36 @@
             </div>
          </div>
     </div>
+    <!-- Financial Services by Paytm Section-4-4 -->
+    <div class="w-screen h-[640px]  flex">
+        
+        <div class="w-[1170px] flex flex-col mx-auto justify-center">
+
+            <div class="w-[1150px] flex flex-row-reverse mt-1 pb-9 gap-40">
+
+                <div class="w-[560px] h-[420px] flex flex-col justify-start gap-6 pt-1">
+
+                    <img class="w-40 mb-4" src="./my_paytm_asset_collection/paytmPersonalLoan.png" alt="">
+
+                    <h1 class="w-[420px] text-[40px] leading-[45px] font-bold">Get a Personal Loan in 2 Minutes.</h1>
+
+                    <p class="w-[500px] text-[17px] font-semibold leading-6 mb-1">Paytm offers India's quickest multi-purpose, hassle-free loan. It is 100% digital, transparent and paperless.</p>
+
+                    <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outline hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                        <p>Learn More ></p> 
+                    </div>
+
+                </div>
+
+                <div class="">
+                    <img class="my-auto h-[400px]" src="./my_paytm_asset_collection/paytmPersonalLoanApproved.png" alt="">
+                </div>
+
+            </div>
+
+         </div>
+
+    </div>
     
 
    </section>
