Added Blue Print for BusinessByPaytm sections and Added Business Services by Paytm section 5-1

--- a/index.html
+++ b/index.html
@@ -423,7 +423,53 @@
          </div>
 
     </div>
-    
+
+    <!-- Business by Paytm Section -->
+    <section aria-label="BusinessByPaytm">
+        <div class="container bg-white">
+            <div class="w-[1150px] mx-auto flex flex-col py-28">
+            <!-- Business Services by Paytm Section 5-1 -->
+                <div class="flex flex-col gap-12">
+                    <h1 class="text-[50px] leading-[45px] font-bold">Business Services by Paytm</h1>
+
+                    <div class="bg-[#F5F7FA] rounded-lg flex flex-row justify-between items-center p-20 pr-0">
+                        <div class="flex flex-col gap-8 pl-8">
+                            <h1 class="w-[420px] text-[38px] leading-[45px] font-bold">Accept payments online with ease</h1>
+                            <p class="w-[440px] text-[17px] font-semibold leading-6 mb-1">Grow your business with the payment gateway that powers India’s largest brands and even the Paytm App</p>
+                            <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outlin24hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+                        <div class="max-w-md">
+                            <img src="./my_paytm_asset_collection/paytmAllInOnePayments.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="bg-[#F5F7FA] rounded-lg flex flex-row justify-between items-center p-20 pr-0">
+                        <div class="flex flex-col gap-8  pl-8">
+                            <h1 class="w-[420px] text-[38px] leading-[45px] font-bold">In-shop payments powered by Paytm.</h1>
+                            <p class="w-[440px] text-[17px] font-semibold leading-6 mb-1">Millions of small & big businesses use Paytm to accept payments anywhere any time with a wide range of solutions for all kind of merchants</p>
+                            <div class="flex flex-row font-semibold space-x-4 w-[155px] items-center bg-[#002970] rounded-full text-white py-3 px-6 hover:bg-sky-400 hover:outlin24hover:outline-1 hover:outline-transparent hover:fill-[#000] hover:stroke-1 hover:stroke-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+                        <div class="max-w-md">
+                            <img src="./my_paytm_asset_collection/paytmForBusiness.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            <!-- Business Tools by Paytm Section 5-2 -->
+                <div></div>
+            <!-- Paytm Money & Travel Cards Section 5-3 -->
+                <div>
+                    <!-- Paytm  Money Section 5-3-1-->
+                    <div></div>
+                    <!-- Paytm Travel Section 5-3-2 -->
+                    <div></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
    </section>
 
