Added Business Tools section, Section 5-2

--- a/index.html
+++ b/index.html
@@ -426,8 +426,8 @@
 
     <!-- Business by Paytm Section -->
     <section aria-label="BusinessByPaytm">
-        <div class="container bg-white">
-            <div class="w-[1150px] mx-auto flex flex-col py-28">
+        <div class="container bg-white w-screen">
+            <div class="w-[1150px] mx-auto flex flex-col py-28 gap-44">
             <!-- Business Services by Paytm Section 5-1 -->
                 <div class="flex flex-col gap-12">
                     <h1 class="text-[50px] leading-[45px] font-bold">Business Services by Paytm</h1>
@@ -459,7 +459,54 @@
                     </div>
                 </div>
             <!-- Business Tools by Paytm Section 5-2 -->
-                <div></div>
+                <div class="w-[1150px] h-max mx-auto flex flex-col gap-24">
+
+                    <h1 class="text-[44px] leading-[48px] font-bold">Business Tools to help <br> your business grow</h1>
+                    
+                    <div class="flex flex-row gap-20">
+
+                        <div class="w-[240px] flex flex-col gap-2">
+                            <img class="max-w-[240px]" src="./my_paytm_asset_collection/Dashboard.png" alt="">
+                            <h1 class="text-[26px] leading-[32px] font-bold py-6">POS Billing <br>
+                                Software</h1>
+                            <p class="text-[20px] leading-[28px] font-semibold leading-6 mb-1">Say Hello to Smart Retail Business Management</p>
+                            <div class="flex flex-row font-bold space-x-4 w-[155px] items-center bg-transparent rounded-full text-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+
+                        <div class="w-[240px] flex flex-col gap-2">
+                            <img class="max-w-[240px]" src="./my_paytm_asset_collection/paytmforBusinessApp.png" alt="">
+                            <h1 class="text-[26px] leading-[32px] font-bold py-6">Paytm for
+                                <br>Business App</h1>
+                            <p class="text-[20px] leading-[28px] font-semibold leading-6 mb-1">Everything you need to manage your business on your phone</p>
+                            <div class="flex flex-row font-bold space-x-4 w-[155px] items-center bg-transparent rounded-full text-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+
+                        <div class="w-[240px] flex flex-col gap-2">
+                            <img class="max-w-[240px]" src="./my_paytm_asset_collection/AdvertiseOnPaytm.png" alt="">
+                            <h1 class="text-[26px] leading-[32px] font-bold py-6">Advertise on
+                             <br>Paytm</h1>
+                            <p class="text-[20px] leading-[28px] font-semibold leading-6 mb-1">Grow your business by advertising on India’s largest mobile business</p>
+                            <div class="flex flex-row font-bold space-x-4 w-[155px] items-center bg-transparent rounded-full text-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+
+                        <div class="w-[240px] flex flex-col gap-2">
+                            <img class="max-w-[240px]" src="./my_paytm_asset_collection/BussinessKhata.png" alt="">
+                            <h1 class="text-[26px] leading-[32px] font-bold py-6">Business
+                                <br>Khata</h1>
+                            <p class="text-[20px] leading-[28px] font-semibold leading-6 mb-1">Managing Khata made easy</p>
+                            <div class="flex flex-row font-bold space-x-4 w-[155px] items-center bg-transparent rounded-full text-black">
+                                <p>Learn More ></p> 
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             <!-- Paytm Money & Travel Cards Section 5-3 -->
                 <div>
                     <!-- Paytm  Money Section 5-3-1-->
